--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <section id="presentation" class="contenu">
             <div class="container">
                 <div style="display: block;">
-                     <a style="background-color: rgb(182, 51, 51); color: white; padding: 15px; text-decoration: none; border-radius: 15px; font-size: 24px; display: none" href="Parainage.html">aller</a>
+                     <a style="background-color: rgb(182, 51, 51); color: white; padding: 15px; text-decoration: none; border-radius: 15px; font-size: 24px;" href="Parainage.html">aller</a>
                     <h1 class="wd-fontsize-xl wd-title-color-primary" style="     margin-bottom: 0; font-size: 25px; font-family: Arial, Helvetica, sans-serif;">Bienvenue à Congo Espoir Coaching Scolaire</h1>
                     <br>
                     <br>
