--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <section id="presentation" class="contenu">
             <div class="container">
                 <div style="display: block;">
-                     <a style="background-color: rgb(182, 51, 51); color: white; padding: 15px; text-decoration: none; border-radius: 15px; font-size: 24px;" href="Parainage.html">aller</a>
+                     
                     <h1 class="wd-fontsize-xl wd-title-color-primary" style="     margin-bottom: 0; font-size: 25px; font-family: Arial, Helvetica, sans-serif;">Bienvenue à Congo Espoir Coaching Scolaire</h1>
                     <br>
                     <br>
@@ -142,7 +142,7 @@
                     <br>
                     <br>
                     
-                    <a style="width: 30px; background-color: orange; border-radius: 20px; text-decoration: none; padding: 17px;" href="produit.html">En savoir plus</a>
+                    <a style="width: 30px; background-color: orange; border-radius: 20px; text-decoration: none; padding: 17px;" href="Parainage.html">En savoir plus</a>
 
                     <br>
                     <br>
