--- a/Parainage.html
+++ b/Parainage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>USERS REFERRAL SPACE BY LEARN EARN NETWORK</title>
+    <link rel="icon" href="Image/icon.PNG" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
