--- a/Parainage.html
+++ b/Parainage.html
@@ -153,7 +153,7 @@
         }
 
         function partagerSurWhatsApp() {
-            var lienWhatsApp = "https://wa.me/?text=Voici%20le%20lien%20pour%20vous%20inscrire%20:%20https://learnearnnetwork77.wixsite.com/co-esp-cs/plans-pricing?appSectionParams=%7B%22planIds%22%3A%22a366d1b5-7189-4311-9514-7c93d09b1867%22%7D";
+            var lienWhatsApp = "https://learnearnnetwork77.wixsite.com/co-esp-cs/members";
             window.open
 (lienWhatsApp);
         }
