--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="contact_styles.css">
       
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-        <title>Nous Contacter</title>
+        <title>Downloads</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js"></script>
         <link rel="icon" href="Image/icon.PNG" type="image/png">
         <style>
@@ -57,7 +57,7 @@
             <br>
             <br>
             <br>
-            <p style="color: rgba(0, 0, 0, 0.685);">Le fichier PDF que vous vous appretez de telecharger contient des informations sur CO-ESP-CS, notre mission, nos buts ainsi que des données utiles pour que vous puissiez nous connaitre.</p>
+            <p style="color: rgba(0, 0, 0, 0.685);">Version complète du fichier PDF.</p>
             <br>
             <br>
         </div>
@@ -65,7 +65,7 @@
         <div class="container">
             <h1>Téléchargement PDF</h1>
             <p>Cliquez sur le lien ci-dessous pour télécharger le fichier PDF :</p>
-            <a class="btn-download" href="fichier.pdf" download="Congo-Espoir-Coaching-Scolaire">Télécharger le PDF</a>
+            <a class="btn-download" href="Entier.pdf" download="DivinityGroup">Télécharger le PDF</a>
         </div>
 
 
@@ -73,7 +73,7 @@
 
         <div class="loader-container">
             <div class="loader"></div>
-            <p>CO-ESP CS EN CHARGEMENT...</p>
+            <p>AUTHENTIFICATION DU QR CODE. PATIENTEZ...</p>
         </div>
 
         <script src="scripts_charge.js"></script>
